# silvasta

./: .gitignore  .pre-commit-config.yaml  README.md  launch.md  main.py  problems_installing_cudatoolkit-dev  pyproject.toml
.github/workflows/: publish.yml
configs/: settings.json
docs/: sst_tools_app.md  utils_app.md
examples/: All_Exceptions.py  Instruction_to_CLI_and_Config.py  cli_setup.py  create_summary_file.py  customize_configs.py  dto_events.py  example_settings.json  example_summary_file.py  file_scanner.py  firework.py  folder_scanner.py  list_or_dict_select.py  multi_tree_select.py  name_parsing.py  print_and_sketch.py  print_tree.py  provoke_exceptions.py  raise_exceptions.py  select_list.py  select_tree.py  sketch.py  sketch_book.py  sst_files.py  system_and_events.py
scripts/: daynote.py
src/silvasta/: __init__.py
src/silvasta/cli/: __init__.py  args.py  log.py  monitor.py  scanner.py  setup.py
src/silvasta/config/: __init__.py  defaults.py  manager.py  names.py  paths.py  settings.py
src/silvasta/data/: __init__.py  files.py  scanner.py
src/silvasta/tui/: list_selector.py  tree_selector.py
src/silvasta/utils/: __init__.py  filter.py  log.py  parse.py  path.py  path.pyi.TODO  pathguard.py  pathguard.pyi  pick.py  plot.py  print.py  scanner.py  simple_tree.py  time.py
src/sstcore/: __init__.py  __main__.py  _cli_protocol.py  _event_bus.py  core.py
src/sstcore/cli/: __init__.py  args.py  canvas.py  command.py  engine.py  handler.py  launch.py  layout.py  monitor.py  scanner.py  setup.py  tools.py
src/sstcore/cli/canvas/: __init__.py  _random.py  option.py  safe_typer.py
src/sstcore/cli/scroll/: __init__.py  _random.py  option.py  safe_typer.py
src/sstcore/cli/tools/: __init__.py  _monitor_g3.py  _monitor_g35f.py  _monitor_g43.py  _monitor_gcf1.py  app.py  monitor.py  scanner.py
src/sstcore/config/: __init__.py  bootstrap.py  defaults.py  get_config.py  homes.py  loader.py  manager.py  names.py  paths.py  settings.py  setup.py
src/sstcore/contract/: __init__.py  cli.py  external.py  log.py  native.py  system.py
src/sstcore/data/: __init__.py  _cache_db.py  _todo_diff.py  files.py  files_todo.py  model.py
src/sstcore/events/: __init__.py  _names.py  boot.py  bus.py  core.py  dto.py  loader.py  names.py  protocol.py  register.py  setup.py  view.py
src/sstcore/exceptions/: __init__.py  base.py
src/sstcore/system/: __init__.py  _names.py  core.py  event_bus.py  register.py  setup.py
src/sstcore/tui/: __init__.py  list_selector.py  log_monitor.py  selector.py  tree_selector.py
src/sstcore/utils/: __init__.py  exceptor.py  filter.py  log.py  parse.py  path.py  pathguard.py  pathguard.pyi  print.py  scanner.py  simple_tree.py  time.py
src/sstcore/utils/color/: __init__.py  box.py  colorize.py  palette.py  style.py
src/sstcore/utils/filter/: __init__.py  _debug.py  _default_box.py  path.py  set.py
src/sstcore/utils/log/: __init__.py  _inspect.py  _sink_alice.py  event_handler.py  format.py  inspect.py  param.py  process.py  setup.py
src/sstcore/utils/paint/: __init__.py  _test_prints_rich.py  stylebox.py
src/sstcore/utils/parse/: __init__.py  _match.py  match.py  name.py  parsed_name.py  regex.py  rich_str_name.py  styled_name.py
src/sstcore/utils/parse/name/: __init__.py  base.py  colored.py  core.py  name.py  schema.py
src/sstcore/utils/parse/names/: base.py
src/sstcore/utils/path/: __init__.py  path.py  project_toml.py  search.py  toml_pyproject.py
src/sstcore/utils/path/homes/: __init__.py  confighomes.py  home_setup.py  xdg.py
src/sstcore/utils/path/pathguard/: __init__.py  __init__.pyi  _config.py  _ensure.py  _helper.py  _input.py  _operate.py  _operations.py
src/sstcore/utils/print/: __init__.py  _core.py  _ideas.py  _rich_data_lookup.md  _tele.py  _test_prints_rich.py  base.py  blueprint.py  boxes.py  compose.py  event_handler.py  helper_for_rich_lookup.md  process.py  root.py  stylebox.py  toolbox.py
src/sstcore/utils/print/mixin/: __init__.py  _boxes.py  color.py  emit.py  essential.py  format.py  layout.py  render.py  tool.py  tools.py
src/sstcore/utils/scanner/: __init__.py  scanner.py  summary_file.py
src/sstcore/utils/tree/: __init__.py  examples.py  nodes.py
src/sstcore/utils/view/: __init__.py  _g420.py  _view.py  builder.py  compose.py  deco.py  dto.py  presets.py  protocol.py  registry.py
src/sstcore/utils/view/mixin/: __init__.py  _basics.py  base.py  cli.py  log.py  repr.py  rich.py  string.py
tests/test_view/: test_builder.py  test_view_mro.py  test_view_pydantic.py  test_view_single.py
