[project]
name = "sstcore"
version = "0.2.2a1"
description = "Collection of frequently used generalized Utils, Functions and Tools"
readme = "README.md"
authors = [{ name = "silvan", email = "silvasta3@gmail.com" }]
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
keywords = [
  "utilities",
  "config-management",
  "path-handling",
  "logging",
  "pydantic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "rich>=14.3.3",
]

[project.urls]
Repository = "https://github.com/silvasta/silvasta"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.optional-dependencies]
cli = ["typer"]
tui = ["textual"]
all = ["sstcore[cli]", "sstcore[tui]"]


[tool.sstcore.logging]
level = "INFO"
file_name = "utils.log"
log_dir = "logs"
retention = "1 month"
rotation = "10 MB"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  "E",  # E: pycodestyle errors
  "F",  # F: Pyflakes
  "I",  # I: isort (import sorting)
  "UP", # UP: pyupgrade (modernize syntax)
  "B",  # B: flake8-bugbear (finds likely bugs) 
  "N",  # N: pep8-naming
]
ignore = [
  "E501", # Ignore long lines: only format, not error on them
]
