[project]
name = "sstcore"
version = "0.3.0b3"
description = "Collection of frequently used generalized Utils, Functions and Tools"
readme = "README.md"
authors = [{ name = "silvan", email = "silvasta3@gmail.com" }]
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
keywords = [
  "utilities",
  "config-management",
  "path-handling",
  "logging",
  "pydantic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "rich>=14.3.3",
  "send2trash>=2.1.0",
]

[project.urls]
Repository = "https://github.com/silvasta/silvasta"

[dependency-groups]
dev = ["pre-commit>=4.6.0", "pytest>=9.0.3", "ruff>=0.15.12", "ty>=0.0.44"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[project.optional-dependencies]
cli = ["typer", "fire"]
tui = ["textual"]
all = ["sstcore[cli]", "sstcore[tui]"]


[tool.sstcore.logging]
level = "INFO"
file_name = "utils.log"
log_dir = "logs"
retention = "1 month"
rotation = "10 MB"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = [
  # "D",  # D: docstrings
  "E",  # E: pycodestyle errors
  "F",  # F: Pyflakes
  "I",  # I: isort (import sorting)
  "UP", # UP: pyupgrade (modernize syntax)
  "B",  # B: flake8-bugbear (finds likely bugs)
  "N",  # N: pep8-naming
]
ignore = [
  # "E501", # Ignore long lines: only format, not error on them
  "D400", # Ignore strict period rule, rely on D415 instead
  "D415", # Ignore .?!
  "D203", # Conflicts with D211 (no blank line before class)
  "D212", # Conflicts with D213 (multi-line summary second line)
  "D202", # Conflicts with D213 (multi-line summary second line)
]
