[project]
name = "sstcore"
version = "0.3.0b4"
description = "Collection of Generalized Utils, Functions and Tools"
readme = "README.md"
authors = [{ name = "silvan", email = "silvasta3@gmail.com" }]
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
keywords = [
  # --- Category 1: Descriptors & Features ---
  "utilities",
  "path-handling",
  "config-management",
  "cli-framework",
  "terminal-ui",
  "tui-components",
  # --- Category 2: Ecosystem & Libraries ---
  "pydantic",
  "rich",
  "typer",
  "textual",
  "loguru",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "rich>=14.3.3",
  "send2trash>=2.1.0",
  "fire",
]

[project.urls]
Repository = "https://github.com/silvasta/silvasta"

[dependency-groups]
dev = ["pre-commit>=4.6.0", "pytest>=9.0.3", "ruff>=0.15.12", "ty>=0.0.44"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
sst = "sstcore.__main__:main"

[project.optional-dependencies]
cli = ["typer", "textual"]
all = ["sstcore[cli]"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "D",  # docstrings
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
]

ignore = [ # TODO: __doc__
  "E501",
  # --- The "Don't Force Me to Write Comments" Rules ---
  "D104", #  15  #  5  # Missing docstring in public package
  "D101", #  16  #  5  # Missing docstring in public class
  "D100", #  43  #  4  # Missing docstring in public module
  "D107", #  14  #  3  # Missing docstring in __init__
  "D103", #   7  #  3  # Missing docstring in public function
  "D102", # 125  #  2  # Missing docstring in public method
  "D106", #   8  #  1  # Missing docstring in public nested class
  "D105", #   8  #  1  # Missing docstring in magic method

  # --- The "Stop Micromanaging My Punctuation" Rules ---
  "D400", # First line must end with a period
  "D415", # First line must end with a period, question mark, or exclamation point

  # --- Aesthetic Preferences & Layout Adjustments ---
  "D212", # Multi-line docstring summary should start at the first line

  # --- Conflict Resolution (Mandatory for Ruff Formatter compatibility) ---
  "D203", # One-blank-line-before-class (Conflicts with D211)
  "D202", # No blank lines allowed after function docstring
]

# TASK: use this to filter
# [tool.ruff.lint.per-file-ignores]
# # Keep tracking progress, but allow mixins and low-priority files to remain quiet
# "src/sstcore/utils/print/mixin/*.py" = ["D101", "D102"]
# "src/sstcore/tui/*.py" = ["D102"]
